# OpenFoamHPC

./: CMakeLists.txt
applications/: CMakeLists.txt
applications/solvers/heatTransfer/buoyantSimpleFoam/: buoyantSimpleFoam.C
applications/solvers/incompressible/simpleFoam/: simpleFoam.C
applications/solvers/incompressible/simpleFoamHPC/: simpleFoamHPC.C
applications/solvers/incompressible/simpleFoamHPC/Make/: files
scripts/: verify_simpleFoamHPC.py
